# CppNeuralNet

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/Activation/: Activation.h
src/Interfaces/: ILayer.h
src/Layers/: Dense.cpp  Dense.h
src/Matrix/: Matrix.cpp  Matrix.h
src/Net/: Loss.h  NeuralNetwork.cpp  NeuralNetwork.h
src/Tensor/: Tensor.h
